--- a/.github/workflows/build-apk-musicfree.yml
+++ b/.github/workflows/build-apk-musicfree.yml
@@ -71,7 +71,7 @@ jobs:
         working-directory: ./musicfree_source/android
         run: | 
           chmod +x ./gradlew
-          ./gradlew assembleArm64V8aRelease --parallel  --configure-on-demand
+          ./gradlew clean :app:assembleRelease -Psplits.abi.enable=true -Psplits.abi.include=arm64-v8a -Psplits.abi.universalApk=false --parallel  --configure-on-demand
           # ./gradlew assembleRelease --parallel --build-cache --configure-on-demand
           # ./gradlew assembleRelease -Pandroid.injected.abiFilters=arm64-v8a
           # ./gradlew assembleRelease -Psplits.abi.include=arm64-v8a -Psplits.abi.universalApk=false
