--- a/.github/workflows/build-apk-squircle-ce.yml
+++ b/.github/workflows/build-apk-squircle-ce.yml
@@ -27,9 +27,10 @@ jobs:
         uses: actions/checkout@main
         with:
           repository: massivemadness/Squircle-CE
-          ref: 2025.1.3
+          ref: master
           path: squircle_ce_source
           fetch-depth: 0
+          submodules: recursive
  
       - name: Checkout ci source repo (self)
         uses: actions/checkout@main
