--- a/.github/workflows/build-apk-squircle-ce.yml
+++ b/.github/workflows/build-apk-squircle-ce.yml
@@ -43,15 +43,22 @@ jobs:
         run: |
           echo "BUILD_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
  
-      - name: Setup java
+      - name: Setup java 17
         uses: actions/setup-java@main
         with:
           java-version: "${{ env.JDK_VERSION }}"
           distribution: "temurin"
  
-      - name: Force compile with jdk17
-        run: |
-          echo "JAVA_HOME=$JAVA_HOME_17_X64" >> $GITHUB_ENV
+       - name: Force gradle jvm to java 17
+         run: |
+           echo "org.gradle.java.home=$JAVA_HOME_17_X64" >> ~/.gradle/gradle.properties
+           echo "org.gradle.jvmargs=-Xmx4096M" >> ~/.gradle/gradle.properties
+ 
+       - name: Force kotlin jvm target 17
+         run: |
+           echo "kotlin.jvm.target.validation.mode=warning" >> gradle.properties
+           echo "android.compileOptions.sourceCompatibility=17" >> gradle.properties
+           echo "android.compileOptions.targetCompatibility=17" >> gradle.properties
  
       - name: Decode keystore.p12 and write signing.properties
         working-directory: ./squircle_ce_source
