--- a/.github/workflows/build-apk-squircle-ce.yml
+++ b/.github/workflows/build-apk-squircle-ce.yml
@@ -49,16 +49,14 @@ jobs:
           java-version: "${{ env.JDK_VERSION }}"
           distribution: "temurin"
  
-       - name: Force gradle jvm to java 17
-         run: |
-           echo "org.gradle.java.home=$JAVA_HOME_17_X64" >> ~/.gradle/gradle.properties
-           echo "org.gradle.jvmargs=-Xmx4096M" >> ~/.gradle/gradle.properties
- 
-       - name: Force kotlin jvm target 17
-         run: |
-           echo "kotlin.jvm.target.validation.mode=warning" >> gradle.properties
-           echo "android.compileOptions.sourceCompatibility=17" >> gradle.properties
-           echo "android.compileOptions.targetCompatibility=17" >> gradle.properties
+      - name: Force gradle & kotlin jvm to java 17
+        working-directory: ./squircle_ce_source
+        run: |
+          echo "org.gradle.java.home=$JAVA_HOME_17_X64" >> ./gradle.properties
+          echo "org.gradle.jvmargs=-Xmx4096M" >> ./gradle.properties
+          echo "kotlin.jvm.target.validation.mode=warning" >> ./gradle.properties
+          echo "android.compileOptions.sourceCompatibility=17" >> ./gradle.properties
+          echo "android.compileOptions.targetCompatibility=17" >> ./gradle.properties
  
       - name: Decode keystore.p12 and write signing.properties
         working-directory: ./squircle_ce_source
