--- a/.github/workflows/build-apk-squircle-ce.yml
+++ b/.github/workflows/build-apk-squircle-ce.yml
@@ -5,7 +5,7 @@ on:
   workflow_call:
  
 env:
-  JDK_VERSION: '17'
+  JDK_VERSION: '25'
   ANDROID_COMPILE_SDK: '36'
   ANDROID_BUILD_TOOLS: '36.0.0'
   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
@@ -19,13 +19,14 @@ jobs:
     steps:
       - name: Clean runner environment
         run: |
-          rm -rf ~/.gradle
-          rm -rf ~/.android
+          # 清理可能存在的全局缓存文件
+          rm -rf ~/.gradle/caches/
+          rm -rf ~/.gradle/daemon/
+          rm -rf ~/.android/build-cache/
           rm -rf .gradle
  
-      # 🔴 改动1：只把 main → v6（和作者完全一致）
       - name: Checkout source repo
-        uses: actions/checkout@v6
+        uses: actions/checkout@main
         with:
           repository: massivemadness/Squircle-CE
           ref: master
@@ -34,7 +35,7 @@ jobs:
           submodules: recursive
  
       - name: Checkout ci source repo (self)
-        uses: actions/checkout@v6
+        uses: actions/checkout@main
         with:
           path: ci_source
  
@@ -42,17 +43,11 @@ jobs:
         run: |
           echo "BUILD_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
  
-      - name: Setup java 17
-        uses: actions/setup-java@v5
+      - name: Setup java
+        uses: actions/setup-java@main
         with:
           java-version: "${{ env.JDK_VERSION }}"
-          distribution: 'temurin'
- 
-      # 🔴 改动2：只加这1行！强制Gradle自身用JDK17（之前我错加了一堆，现在只这一行）
-      - name: Force Gradle to use Java 17
-        working-directory: ./squircle_ce_source
-        run: |
-          echo "org.gradle.java.home=$JAVA_HOME_17_X64" >> gradle.properties
+          distribution: "temurin"
  
       - name: Decode keystore.p12 and write signing.properties
         working-directory: ./squircle_ce_source
@@ -65,17 +60,17 @@ jobs:
           KEY_PASSWORD=${{ secrets.KEY_ALIAS_PASSWORD }}
           EOF
  
-      # 🔴 改动3：完全和作者GMS CI命令一样，只留 --no-configuration-cache
       - name: Build apk
         working-directory: ./squircle_ce_source
         run: | 
           chmod +x ./gradlew
-          ./gradlew clean
-          ./gradlew :app:assembleGmsRelease --no-configuration-cache
+          ./gradlew :app:bundleGmsRelease --no-configuration-cache --stacktrace
  
       - name: List generated apk and rename
         working-directory: ./squircle_ce_source
         run: |
           echo "Generated APK files:"
           find app/build/outputs -name "*.apk" -exec ls -lh {} \;
-          mkdir -p ${{ github.workspace }}/dist
+          # mkdir -p ${{ github.workspace }}/dist
+          # mv app/build/outputs/apk/release/app-arm64-v8a-release.apk "${{ github.workspace }}/dist/squircle-ce-${{ env.BUILD_DATE }}.apk"
+ 
