--- a/.github/workflows/build-apk-squircle-ce.yml
+++ b/.github/workflows/build-apk-squircle-ce.yml
@@ -75,8 +75,12 @@ jobs:
         working-directory: ./squircle_ce_source
         run: |
           chmod +x ./gradlew
-          ./gradlew :app:bundleGmsRelease --no-configuration-cache --stacktrace -x :app:produceGmsReleaseComposeMapping
-
+          ./gradlew :app:bundleGmsRelease --no-configuration-cache \
+            --stacktrace \
+            -x :app:produceGmsReleaseComposeMapping \
+            -x :app:mergeGmsReleaseComposeMapping \
+            -x :app:produceGmsReleaseComposeMappingLegacy
+ 
       - name: List generated apk and rename
         working-directory: ./squircle_ce_source
         run: |
