--- a/.github/workflows/build-apk-squircle-ce.yml
+++ b/.github/workflows/build-apk-squircle-ce.yml
@@ -48,7 +48,7 @@ jobs:
           java-version: "${{ env.JDK_VERSION }}"
           distribution: "temurin"
 
-      # 🔧 新增：强制 Gradle 使用当前 JDK
+      # 强制 Gradle 使用当前 JDK
       - name: Force gradle to use jdk 21
         working-directory: ./squircle_ce_source
         run: |
@@ -56,7 +56,6 @@ jobs:
           echo "org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m" >> gradle.properties
           echo "org.gradle.daemon=false" >> gradle.properties
 
-      # 🔧 新增：验证 Java 版本
       - name: Verify java version
         run: java -version
 
@@ -71,16 +70,21 @@ jobs:
           KEY_PASSWORD=${{ secrets.KEY_ALIAS_PASSWORD }}
           EOF
 
+      - name: List all compose mapping
+        working-directory: ./squircle_ce_source
+      - run: |
+          echo ./gradlew tasks --all | grep -i "compose.*mapping"
+
       - name: Build apk
         working-directory: ./squircle_ce_source
         run: |
           chmod +x ./gradlew
-          ./gradlew :app:bundleGmsRelease --no-configuration-cache \
+          ./gradlew :app:bundleGmsRelease \
+            --no-configuration-cache \
             --stacktrace \
             -x :app:produceGmsReleaseComposeMapping \
-            -x :app:mergeGmsReleaseComposeMapping \
-            -x :app:produceGmsReleaseComposeMappingLegacy
- 
+            -x :app:mergeGmsReleaseComposeMapping
+
       - name: List generated apk and rename
         working-directory: ./squircle_ce_source
         run: |
