--- a/.github/workflows/build-apk-koreader.yml
+++ b/.github/workflows/build-apk-koreader.yml
@@ -7,7 +7,6 @@ env:
   JDK_VERSION: '17'
   ANDROID_COMPILE_SDK: '34'
   ANDROID_BUILD_TOOLS: '34.0.0'
-  ANDROID_NDK_VERSION: '26.1.10909125'
   ANDROID_ARCH: arm64
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -30,6 +29,7 @@ jobs:
         uses: actions/checkout@main
         with:
           repository: koreader/koreader
+          ref: master
           path: koreader_source
           fetch-depth: 0
           submodules: recursive
