--- a/.github/workflows/build-apk-koreader.yml
+++ b/.github/workflows/build-apk-koreader.yml
@@ -104,7 +104,19 @@ jobs:
         working-directory: ./koreader_source
         run: |
           export ANDROID_ARCH=${{ env.ANDROID_ARCH }}
-          make TARGET=android update V=1   # 输出详细日志便于排查
+          # 不使用 V=1，避免日志爆炸
+          make TARGET=android update
+        # 可选：设置超时，防止作业挂起
+        timeout-minutes: 120
+
+      - name: Debug - list build directory
+        working-directory: ./koreader_source
+        if: always()  # 无论成功失败都运行
+        run: |
+          echo "=== Content of base/build ==="
+          ls -la base/build/
+          echo "=== Looking for APK ==="
+          find . -name "*.apk" -ls
 
       - name: Locate and rename apk
         working-directory: ./koreader_source
@@ -112,14 +124,13 @@ jobs:
           mkdir -p dist
           APK_FILE=$(find . -name "koreader-android-*.apk" -type f | head -1)
           if [ -z "$APK_FILE" ]; then
-            echo "APK not found!"
+            echo "APK not found! Check build logs."
             exit 1
           fi
           mv "$APK_FILE" "${{ github.workspace }}/dist/koreader-unsigned.apk"
-
-      - name: Decode keystore.p12
-        run: |
-          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > keystore.p12
+            - name: Decode keystore.p12
+              run: |
+                echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > keystore.p12
 
       - name: Sign apk (pkcs12)
         run: |
