--- a/.github/workflows/build-apk-koreader.yml
+++ b/.github/workflows/build-apk-koreader.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y make wget unzip ccache ninja-build python3-pip
+          sudo apt-get install -y make wget unzip ccache ninja-build python3-pip gettext
           pip3 install meson
 
       - name: Setup ccache
@@ -95,7 +95,6 @@ jobs:
         working-directory: ./koreader_source
         run: make fetchthirdparty
 
-      # 清理之前可能的构建残留
       - name: Clean base build directory
         working-directory: ./koreader_source
         run: make clean || true
